# paradigmas-programacao-final

./: ChangeLog.md  Dockerfile  README.md  SortingAlgos.html  paradigmas-programacao-final.cabal  stack.yaml
src/: Main copy.txt  Main.hs  SortingAlgorithms.hs
test/: Spec.hs
