name:                paradigmas-programacao-final
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/paradigmas-programacao-final#readme
license:             BSD3
license-file:        LICENSE
author:              Diogo Miyake
maintainer:          akio.miyake@live.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     ChangeLog.md

executable paradigmas-programacao-final
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , tasty
                      , tasty-hunit
